--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section class="about">
         <div class="text-about">
             <h1>It's not just Coffee
-            <br>It's <span style="color:#276a3e"><strong>Starbucks</strong></span></h1>
+            <br>It's <span id="bucks">Starbucks</span></h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ac varius mi, et consectetur risus. Nunc lobortis, eros mollis vehicula vestibulum, nulla enim hendrerit dui, a suscipit ipsum magna ac sapien.</p>
             <button>Learn More</button>
         </div>
